examples/tested/assignment/infix_operator.lit
let a = "a";
let b = "b";
a + b = "value"; # error: [line 3] Error at "=": I was expecting a variable before the equal sign.
